--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
             </div>
             
             <div class="trust-badges">
-                <img src="images/bacen-logo.png" alt="Registrado no BACEN">
-                <img src="images/abecs-logo.png" alt="Associado ABECS">
-                <img src="images/ssl-seal.png" alt="SSL Seguro">
-                <img src="images/reclame-aqui.png" alt="Ótimo no Reclame Aqui">
+                <a href="https://www.bcb.gov.br" target="_blank"><img src="images/bacen-logo.png" alt="Registrado no BACEN"></a>
+                <a href="https://www.abecs.org.br" target="_blank"><img src="images/abecs-logo.png" alt="Associado ABECS"></a>
+                <a href="" target="_blank"><img src="images/ssl-seal.png" alt="SSL Seguro"></a>
+                <a href="https://www.reclameaqui.com.br" target="_blank"><img src="images/reclame-aqui.png" alt="Ótimo no Reclame Aqui"></a>
             </div>
         </div>
     </section>
