--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2503/2503591.png" type="image/png">
     <title>FinançaSegura | Empréstimos Pessoais e Consignados</title>
     <meta name="description"
         content="Soluções financeiras seguras com as melhores taxas do mercado. Empréstimos pessoais, consignados e refinanciamento.">
@@ -932,7 +933,7 @@
     </footer>
 
     <!-- Floating WhatsApp -->
-    <div class="floating-whatsapp">
+    <div class="floating-whatsapp" style="margin-right: 60px;">
         <a href="https://wa.me/551140044004" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-whatsapp"></i>
             <span>Precisa de ajuda?</span>
