--- a/login.html
+++ b/login.html
@@ -240,6 +240,20 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/calculator.js"></script>
     <script src="scripts/form-validation.js"></script>
+
+    <!-- Floating WhatsApp -->
+    <div class="floating-whatsapp" style="margin-right: 60px;">
+        <a href="https://wa.me/551140044004" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-whatsapp"></i>
+            <span>Precisa de ajuda?</span>
+        </a>
+    </div>
+
+    <!-- Back to Top -->
+    <button class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    
 </body>
 
 </html>
