--- a/consignado.html
+++ b/consignado.html
@@ -157,7 +157,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-about">
-                    <img src="images/logo-white.png" alt="FinançaSegura" class="footer-logo">
+                    <a href="index.html"><img src="images/logo-white.png" alt="FinançaSegura" class="footer-logo"></a>
                     <p>A FinançaSegura é uma instituição financeira autorizada pelo Banco Central do Brasil,
                         especializada em soluções de crédito pessoal e consignado.</p>
 
@@ -242,6 +242,20 @@
             </div>
         </div>
     </footer>
+
+    <!-- Floating WhatsApp -->
+    <div class="floating-whatsapp" style="margin-right: 60px;">
+        <a href="https://wa.me/551140044004" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-whatsapp"></i>
+            <span>Precisa de ajuda?</span>
+        </a>
+    </div>
+
+    <!-- Back to Top -->
+    <button class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
 </body>
 
 </html>
