--- a/portability.html
+++ b/portability.html
@@ -513,6 +513,20 @@
             </div>
         </div>
     </footer>
+
+    <!-- Floating WhatsApp -->
+    <div class="floating-whatsapp" style="margin-right: 60px;">
+        <a href="https://wa.me/551140044004" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-whatsapp"></i>
+            <span>Precisa de ajuda?</span>
+        </a>
+    </div>
+
+    <!-- Back to Top -->
+    <button class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    
 </body>
 
 </html>
