--- a/consignado.html
+++ b/consignado.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    
+
 
     <!-- Fonts -->
     <link
@@ -19,32 +19,20 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <!-- Exemplo para faq-full.html -->
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/consignado.css">
     <link rel="stylesheet" href="styles/responsive.css">
 
     <!-- Security Headers -->
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://code.jquery.com https://cdn.jsdelivr.net; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    
+
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
 </head>
 
 <body>
-    <!-- Top Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <div class="contact-info">
-                <span><i class="fas fa-phone-alt"></i> (11) 4004-4004</span>
-                <span><i class="fas fa-envelope"></i> contato@financasegura.com.br</span>
-                <span><i class="fas fa-map-marker-alt"></i> Av. Paulista, 1000 - São Paulo/SP</span>
-            </div>
-            <div class="security-badge">
-                <img src="images/security-badge.png" alt="Site Seguro" title="Site 100% seguro com criptografia SSL">
-                <span>Ambiente 100% Seguro</span>
-            </div>
-        </div>
-    </div>
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -255,6 +243,8 @@
     <button class="back-to-top">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    <script src="scripts/consignado.js"></script>
 
 </body>
 
