--- a/portability.html
+++ b/portability.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    
+
 
     <!-- Fonts -->
     <link
@@ -19,13 +19,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <!-- Exemplo para faq-full.html -->
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/portability.css">
     <link rel="stylesheet" href="styles/responsive.css">
 
     <!-- Security Headers -->
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://code.jquery.com https://cdn.jsdelivr.net; style-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">    
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
 </head>
 
@@ -337,7 +339,9 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>É possível portar a maioria dos tipos de empréstimo, incluindo pessoal, consignado, crédito imobiliário e financiamento de veículos. O empréstimo precisa estar em dia e a instituição atual deve permitir a portabilidade.</p>
+                        <p>É possível portar a maioria dos tipos de empréstimo, incluindo pessoal, consignado, crédito
+                            imobiliário e financiamento de veículos. O empréstimo precisa estar em dia e a instituição
+                            atual deve permitir a portabilidade.</p>
                     </div>
                 </div>
 
@@ -479,21 +483,27 @@
                     <div class="app-download">
                         <p>Baixe nosso app:</p>
                         <div class="app-buttons">
-                            <a href="#" aria-label="Google Play"><img src="images/google-play-badge.png" alt="Disponível no Google Play"></a>
-                            <a href="#" aria-label="App Store"><img src="images/app-store-badge.png" alt="Baixar na App Store"></a>
+                            <a href="#" aria-label="Google Play"><img src="images/google-play-badge.png"
+                                    alt="Disponível no Google Play"></a>
+                            <a href="#" aria-label="App Store"><img src="images/app-store-badge.png"
+                                    alt="Baixar na App Store"></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="footer-disclaimer">
-                    <p>FinançaSegura S.A. - CNPJ: 00.000.000/0000-00 - © 2023 Todos os direitos reservados a Nilson Gomes</p>
+                    <p>FinançaSegura S.A. - CNPJ: 00.000.000/0000-00 - © 2023 Todos os direitos reservados a Nilson
+                        Gomes</p>
                     <p>Taxas de juros válidas para contratações até 30/03/2025. Consulte condições.</p>
                 </div>
                 <div class="footer-seals">
-                    <a href="https://www.bcb.gov.br" target="_blank" rel="noopener"><img src="images/bacen-logo.png" alt="Registrado no BACEN"></a>
-                    <a href="https://www.abecs.org.br" target="_blank" rel="noopener"><img src="images/abecs-logo.png" alt="Associado ABECS"></a>
-                    <a href="https://www.reclameaqui.com.br" target="_blank" rel="noopener"><img src="images/reclame-aqui.png" alt="Ótimo no Reclame Aqui"></a>
+                    <a href="https://www.bcb.gov.br" target="_blank" rel="noopener"><img src="images/bacen-logo.png"
+                            alt="Registrado no BACEN"></a>
+                    <a href="https://www.abecs.org.br" target="_blank" rel="noopener"><img src="images/abecs-logo.png"
+                            alt="Associado ABECS"></a>
+                    <a href="https://www.reclameaqui.com.br" target="_blank" rel="noopener"><img
+                            src="images/reclame-aqui.png" alt="Ótimo no Reclame Aqui"></a>
                 </div>
             </div>
         </div>
@@ -512,7 +522,8 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    
-<script src="scripts/faq.js"></script>
+
+    <script src="scripts/portability.js"></script>
 </body>
+
 </html>
