--- a/taxas-prazos.html
+++ b/taxas-prazos.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    
+
     <!-- Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@400;600&display=swap"
@@ -18,7 +18,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <!-- Exemplo para faq-full.html -->
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/taxas-prazos.css">
     <link rel="stylesheet" href="styles/responsive.css">
 
     <!-- Security Headers -->
@@ -318,7 +320,9 @@
     <button class="back-to-top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    
+
+    <script src="scripts/taxas-prazos.js"></script>
+
 </body>
 
 </html>
